--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.2",
+    "flag-icons": "^6.6.6",
+    "marked": "^4.2.5",
     "mobx": "^6.7.0",
     "mobx-react": "^7.6.0",
     "prettier": "^2.8.0",
