--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vpn_love",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://AnnaChervatyuk.github.io/vpn_love/",
+  "homepage": "http://AnnaChervatyuk.github.io/vpn_love",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -15,9 +15,9 @@
     "prettier": "^2.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dynamic-sitemap": "^1.2.1",
     "react-konva": "^18.2.3",
     "react-router-dom": "^6.0.2",
-    "react-router-sitemap": "^1.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.56.1",
     "swiper": "^8.4.5",
